sprint4/tests/error/01_indent.py
# Incorrect indent
#
if True:
    a: int = 1
